--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "three": "^0.139.2"
   },
   "devDependencies": {
+    "@types/three": "^0.139.0",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
