--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cornerstonejs/core": "file:cornerstonejs-core-0.13.9.tgz",
+    "@cornerstonejs/streaming-image-volume-loader": "file:cornerstonejs-streaming-image-volume-loader-0.4.9.tgz",
+    "@cornerstonejs/tools": "file:cornerstonejs-tools-0.20.11.tgz",
     "antd": "^4.19.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -15,10 +18,10 @@
     "three": "^0.139.2"
   },
   "devDependencies": {
-    "@types/three": "^0.139.0",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/three": "^0.139.0",
     "@vitejs/plugin-react": "^1.0.7",
     "less": "^4.1.2",
     "typescript": "^4.5.4",
