--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@cornerstonejs/streaming-image-volume-loader": "file:cornerstonejs-streaming-image-volume-loader-0.4.9.tgz",
     "@cornerstonejs/tools": "file:cornerstonejs-tools-0.20.11.tgz",
     "antd": "^4.19.5",
+    "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
