--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@cornerstonejs/tools": "file:cornerstonejs-tools-0.20.11.tgz",
     "antd": "^4.19.5",
     "axios": "^0.27.2",
+    "dcmjs": "^0.24.2",
+    "dicomweb-client": "^0.8.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
@@ -26,6 +28,6 @@
     "@vitejs/plugin-react": "^1.0.7",
     "less": "^4.1.2",
     "typescript": "^4.5.4",
-    "vite": "^2.9.0"
+    "vite": "^2.9.13"
   }
 }
