--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-react": "^1.0.7",
     "less": "^4.1.2",
     "typescript": "^4.5.4",
-    "vite": "^2.9.13"
+    "vite": "^2.9.13",
+    "vite-plugin-pwa": "^0.12.2"
   }
 }
