--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dicomweb-client": "^0.8.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "three": "^0.139.2"
   },
