--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@cornerstonejs/core": "^0.13.9",
     "@cornerstonejs/streaming-image-volume-loader": "^0.4.9",
     "@cornerstonejs/tools": "^0.20.11",
+    "@reduxjs/toolkit": "^1.8.3",
     "antd": "^4.19.5",
     "axios": "^0.27.2",
     "dcmjs": "^0.24.2",
