--- a/src/utils/tools/package.json
+++ b/src/utils/tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cornerstonejs/tools",
-  "version": "0.20.11",
+  "version": "0.20.12",
   "description": "Cornerstone3D Tools",
   "main": "dist/umd/index.js",
   "types": "dist/esm/index.d.ts",
@@ -25,14 +25,16 @@
   },
   "dependencies": {
     "@cornerstonejs/core": "^0.13.9",
-    "lodash.clonedeep": "4.5.0"
+    "lodash.clonedeep": "4.5.0",
+    "lodash.get": "^4.4.2"
   },
   "peerDependencies": {
     "@kitware/vtk.js": "24.18.7",
+    "@types/d3-array": "^3.0.3",
+    "@types/d3-interpolate": "^3.0.1",
     "gl-matrix": "^3.4.3"
   },
   "devDependencies": {
-    "@cornerstonejs/core": "^0.9.0",
     "@cornerstonejs/streaming-image-volume-loader": "^0.4.9",
     "@kitware/vtk.js": "24.18.7"
   },
