--- a/src/utils/tools/package.json
+++ b/src/utils/tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cornerstonejs/tools",
-  "version": "0.20.12",
+  "version": "0.20.13",
   "description": "Cornerstone3D Tools",
   "main": "dist/umd/index.js",
   "types": "dist/esm/index.d.ts",
@@ -32,6 +32,8 @@
     "@kitware/vtk.js": "24.18.7",
     "@types/d3-array": "^3.0.3",
     "@types/d3-interpolate": "^3.0.1",
+    "d3-array": "^3.0.3",
+    "d3-interpolate": "^3.0.1",
     "gl-matrix": "^3.4.3"
   },
   "devDependencies": {
